overflow-y scroll body , sökfunktionen fixad

--- a/src/css/basic.css
+++ b/src/css/basic.css
@@ -23,6 +23,7 @@ body {
 }
 
 body {
+  overflow-y: scroll;
   min-width: 32rem;
   background-color: var(--accent);
   font-size: 1.6rem;
